--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: parse-versions-and-date
         run: |
           echo "R_VERSION=$(grep -oP "(?<=R \\(== )[3-9]\\.[0-9]\\.[0-9]" dependencies/DESCRIPTION)" >> $GITHUB_ENV
-          echo "R_VERSION_BINDER=$(grep -oP "(?<=R \\(== )3\.[0-6]" dependencies/DESCRIPTION)" >> $GITHUB_ENV # uses default otherwise
+          echo "R_VERSION_BINDER=$(grep -oP "(?<=R \\(== )[3-9]\\.[0-9]\\.[0-9]" dependencies/DESCRIPTION)" >> $GITHUB_ENV # uses default otherwise
           echo "MRAN_DATE=$(grep -oP "(?<=Date: )[0-9]{4}-[0-9]{2}-[0-9]{2}" dependencies/DESCRIPTION)" >> $GITHUB_ENV # uses default otherwise
     
       - name: setup-r
@@ -35,13 +35,13 @@ jobs:
           while read -r cmd
           do
             eval sudo $cmd
-          done < <(Rscript -e 'options(repos = c(CRAN = sprintf("https://mran.revolutionanalytics.com/snapshot/%s", Sys.getenv("MRAN_DATE")))); install.packages("remotes"); writeLines(remotes::system_requirements("ubuntu", "20.04", path = "dependencies"))')
+          done < <(Rscript -e 'options(repos = c(CRAN = "https://cran.r-project.org")); install.packages("remotes"); writeLines(remotes::system_requirements("ubuntu", "20.04", path = "dependencies"))')
       
       - name: update-binder-specification
         if: github.event_name == 'push'
         run: |
           Rscript -e 'writeLines(gsub("^apt-get install -y ", "", remotes::system_requirements("ubuntu", "20.04", path = "dependencies"), perl = TRUE))' > .binder/apt.txt
-          Rscript -e 'writeLines(sprintf("r-%s-%s", Sys.getenv("R_VERSION_BINDER", unset = "3.6"), Sys.getenv("MRAN_DATE")))' > .binder/runtime.txt
+          Rscript -e 'writeLines(sprintf("r-%s-%s", Sys.getenv("R_VERSION_BINDER", unset = "4.3.1"), Sys.getenv("MRAN_DATE")))' > .binder/runtime.txt
           git config user.email "<>"
           git config user.name "GitHub runner"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
@@ -57,7 +57,7 @@ jobs:
           
       - name: setup-packages
         run: |
-          options(repos = c(CRAN = sprintf("https://mran.revolutionanalytics.com/snapshot/%s", Sys.getenv("MRAN_DATE"))))
+          options(repos = c(CRAN = "https://cran.r-project.org"))
           install.packages("here")
           remotes::install_deps(dependencies = TRUE, pkg = "dependencies", upgrade = "always")
         shell: Rscript {0}
@@ -75,5 +75,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
           FOLDER: _build # The folder the action should deploy.
-          CLEAN: true # Automatically remove deleted files from the deploy branch- uses:actions/de
-          SINGLE_COMMIT: true 
+          CLEAN: true # Automatically remove deleted files from the deploy branch
+          SINGLE_COMMIT: true
